0.68 (02.16.2006) - John Siracusa <siracusa@mindspring.com>

    * Added the default_load_speculative() metadata attribute.  
      (Suggested by Teodor Zlatanov)
    * Added if_not_found() foreign key and relationship attribute.
      (Suggested by Teodor Zlatanov)
    * Corrected some errors in the tutorial.

0.67 (02.07.2006) - John Siracusa <siracusa@mindspring.com>

    * Added the ability to directly set attributes in map records
      when saving the parent object.  (Suggested by Bruno Czekay)
    * Slightly rearranged and added to the tutorial.

0.66 (02.02.2006) - John Siracusa <siracusa@mindspring.com>

    * Disabled implicit primary table sort clause in the Manager when 
      only fetching rows from a single table.
    * Allow multiple pre_init_hook()s in the loader and metadata object.
    * Improved auto-initialization of many-to-many relationships.
    * Added with_relationships, with_foreign_keys, with_unique_keys, db,
      and db_class parameters to make_classes() and the loader object.
    * Renamed some obscure convention manager methods and altered the
      default behavior of the is_map_class() method slightly.

0.65 (01.27.2006) - John Siracusa <siracusa@mindspring.com>

    * More MySQL 5 bitfield fixes.  (Reported by Svilen Ivanov)
      Important note: if you are using MySQL 5.0.3 or later and you
      have one or more BIT columns in a given table, you MUST call
      meta->allow_inline_column_values(1) when setting up the 
      Rose::DB::Object-derived class that fronts the table.
    * Added missing "use ..." statements to the code generated by
      perl_class_definition().
    * Fixed a bug that prevented certain kinds of self-referential
      relationships from being initialized properly.  (Reported by
      Bruno Czekay)

0.64 (01.19.2006) - John Siracusa <siracusa@mindspring.com>

    * Worked around yet more SQLite ORDER BY bugs.
    * Improved the column trigger implementation.